# kolja_aws

./: .gitignore  CHANGELOG.md  EXAMPLES.md  README.md  TROUBLESHOOTING.md  pyproject.toml  pytest.ini  settings.toml  test-sensitive.toml  test_arrow_keys.py  test_sp_command.sh
.kiro/specs/configurable-sso-template/: design.md  requirements.md  tasks.md
.kiro/specs/dynamic-parameter-passing/: design.md  requirements.md  tasks.md
.kiro/specs/shell-profile-switcher/: design.md  requirements.md  tasks.md
docs/: profile-naming-format.md
examples/: profile_generation_demo.py  shell_integration_demo.py
kolja_aws/: __init__.py  kolja_login.py  post_install.py  script_generator.py  sso_exceptions.py  sso_session.template  utils.py
scripts/: auto-sanitize.py  sanitize-config.py  setup-git-hooks.sh  setup.sh
tests/: run_integration_tests.py  test_backup_manager.py  test_cli_integration.py  test_environment_variables.py  test_integration.py  test_integration_comprehensive.py  test_integration_e2e.py  test_interactive_config.py  test_performance.py  test_profile_generation.py  test_profile_loader.py  test_profile_switcher.py  test_script_generator.py  test_session_config.py  test_shell_detector.py  test_shell_exceptions.py  test_shell_installer.py  test_shell_integration.py  test_shell_models.py  test_sso_exceptions.py  test_user_experience.py  test_utils_dynamic_config.py  test_validators.py
